misc/localai/00-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localai
  namespace: misc
spec:
  selector:
    matchLabels:
      app: localai
  replicas: 1
  template:
    metadata:
      labels:
        app: localai
    spec:
      containers:
      - name: localai
        image: localai/localai:latest-cpu
        imagePullPolicy: IfNotPresent
        args:
        - phi-2
        ports:
        - containerPort: 8080
          name: https
          protocol: TCP
        volumeMounts:
        - name: models
          mountPath: /build/models
      volumes:
      - name: models
        nfs:
          server: ${NFS_SERVER}
          path: /volume1/kubernetes/config/localai/models
