misc/localai/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: localai-service
  namespace: misc
spec:
  type: ClusterIP
  selector:
    app: localai
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
