misc/localai/02-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: localai-ingress
  namespace: misc
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`ai.${DOMAIN}`)
    kind: Rule
    services:
    - kind: Service
      name: localai-service
      port: http
